1.4.3 (unreleased)
==================

- Add support for more Jinja2 options. Note support for jinja2.autoescape is
  limitted to boolean only.
  * jinja2.block_start_string
  * jinja2.block_end_string
  * jinja2.variable_start_string
  * jinja2.variable_end_string
  * jinja2.comment_start_string
  * jinja2.comment_end_string
  * jinja2.line_statement_prefix
  * jinja2.line_comment_prefix
  * jinja2.trim_blocks
  * jinja2.newline_sequence
  * jinja2.optimized
  * jinja2.cache_size
  * jinja2.autoescape

1.4.2 (2012-10-17)
==================

- Add `jinja2.undefined` setting to change handling of undefined types.
  [Robert Buchholz]

- Remove redundant decoding error handling
  [Domen Kožar]

- Configure bytecode caching by default. Introduce `jinja2.bytecode_caching`
  and `jinja2.bytecode_caching_directory` settings.
  [Domen Kožar]

- Allow to add custom Jinja2 tests in `jinja2.tests` setting.
  [Sebastian Kalinowski]

1.4.1 (2012-09-12)
==================

- Fix brown-bag release
  [Domen Kožar]


1.4 (2012-09-12)
================

- Correctly resolve relative search paths passed to ``add_jinja2_search_path``
  and ``jinja2.directories``
  [Domen Kožar]

- #34: Don't recreate ``jinja2.Environment`` for ``add_jinja2_extension``
  [Domen Kožar]

- Drop Python 2.5 compatibility
  [Domen Kožar]

- Addition of ``static_url`` filter.

- Add ``dev`` and ``docs`` setup.py aliases (ala Pyramid).

- Changed template loading relative to package calling the renderer so
  it works like the Chameleon template loader.

1.3 (2011-12-14)
================

- Make scaffolding compatible with Pyramid 1.3a2+.

1.2 (2011-09-27)
================

- Make tests pass on Pyramid 1.2dev.

- Make compatible with Python 3.2 (requires Pyramid 1.3dev+).

1.1 (2011-07-24)
================

- Add ``get_jinja2_environment`` directive.

- Add all configurator directives to documentation.

1.0 (2011-05-12)
================

- Message domain can now be specified with *jinja2.i18n.domain* for i18n
