@@ -1,8 +1,12 @@
 1.4.3 (unreleased)
 ==================
 
+- Clear bytecode cache on atexit
+  [Domen Kožar]
+
 - Add support for more Jinja2 options. Note support for jinja2.autoescape is
   limitted to boolean only.
+
   * jinja2.block_start_string
   * jinja2.block_end_string
   * jinja2.variable_start_string
@@ -16,6 +20,8 @@
   * jinja2.optimized
   * jinja2.cache_size
   * jinja2.autoescape
+
+  [Michael Ryabushkin]
 
 1.4.2 (2012-10-17)
 ==================
